core/src/components/textarea/textarea.scss
/* ... */
:host(.textarea-label-placement-start) .label-text,
:host(.textarea-label-placement-end) .label-text,
:host(.textarea-label-placement-fixed) .label-text {
  @include margin(10px, 0);

  align-self: baseline;
}

.textarea-wrapper textarea {
  @include padding(8px, 0, 8px, 0);

  /**
    * When the floating label appears on top of the
    * textarea, we need to fade the textarea out so that the
    * label does not overlap with the placeholder.
    */
  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
}

:host(.textarea-label-placement-floating) .textarea-wrapper textarea,
:host(.textarea-label-placement-stacked) .textarea-wrapper textarea {
  /**
   * Pushes the textarea down below the label.
   * Allows multiple lines of the textarea to render
   * without partial truncation or clipping of the text.
   */
  @include margin(1px, 0, 0, 0);
}

// Textarea Label Placement - Start
// ----------------------------------------------------------------

/**
 * Label is on the left of the textarea in LTR and
 * on the right in RTL.
 */
:host(.textarea-label-placement-start) .textarea-wrapper {
  flex-direction: row;
}

:host(.textarea-label-placement-start) .label-text-wrapper {
  /**
   * The margin between the label and
   * the textarea should be on the end
   * when the label sits at the start.
   */
  @include margin(0, 8px, 0, 0);
}

// Textarea Label Placement - End
// ----------------------------------------------------------------

/**
 * Label is on the right of the textarea in LTR and
 * on the left in RTL.
 */
:host(.textarea-label-placement-end) .textarea-wrapper {
  flex-direction: row-reverse;
}

/**
 * The margin between the label and
 * the textarea should be on the start
 * when the label sits at the end.
 */
:host(.textarea-label-placement-end) .label-text-wrapper {
  @include margin(0, 0, 0, 8px);
}

// Textarea Label Placement - Fixed
// ----------------------------------------------------------------

:host(.textarea-label-placement-fixed) .label-text-wrapper {
  /**
   * The margin between the label and
   * the textarea should be on the end
   * when the label sits at the start.
   */
  @include margin(0, 8px, 0, 0);
}

/**
 * Label is on the left of the textarea in LTR and
 * on the right in RTL. Label also has a fixed width.
 */
:host(.textarea-label-placement-fixed) .label-text {
  flex: 0 0 100px;

  width: 100px;
  min-width: 100px;
  max-width: 200px;
}

// Textarea Label Placement - Stacked and Floating
// ----------------------------------------------------------------

/**
 * Stacked: Label sits above the textarea and is scaled down.
 * Floating: Label sits over the textarea when the textarea has no
 * value and is blurred. Label sits above the textarea and is scaled
 * down when the textarea is focused or has a value.
 *
 */
:host(.textarea-label-placement-stacked) .textarea-wrapper,
:host(.textarea-label-placement-floating) .textarea-wrapper {
  flex-direction: column;
  align-items: start;
}

/**
 * Ensures that the label animates
 * up and to the left in LTR or
 * up and to the right in RTL.
 */
:host(.textarea-label-placement-stacked) .label-text-wrapper,
:host(.textarea-label-placement-floating) .label-text-wrapper {
  @include transform-origin(start, top);
  @include margin(10px, 0, 0, 0);

  max-width: 100%;
}

/**
 * This makes the label sit over the textarea
 * when the textarea is blurred and has no value.
 */
:host(.textarea-label-placement-floating) .label-text-wrapper {
  @include transform(translateY(28px), scale(1));
}

/**
 * The textarea should be hidden when the label
 * is on top of the textarea. This prevents the label
 * from overlapping any placeholder value.
 */
:host(.textarea-label-placement-floating) textarea {
  opacity: 0;
}

:host(.has-focus.textarea-label-placement-floating) textarea,
:host(.has-value.textarea-label-placement-floating) textarea {
  opacity: 1;
}

/**
 * This makes the label sit above the textarea.
 */
:host(.textarea-label-placement-stacked) .label-text-wrapper,
:host(.has-focus.textarea-label-placement-floating) .label-text-wrapper,
:host(.has-value.textarea-label-placement-floating) .label-text-wrapper {
  @include transform(scale(0.82));

  /**
   * Label text should not extend
   * beyond the bounds of the textarea.
   */
  max-width: calc(100% / #{$textarea-floating-label-scale});
}

